tests/typechecker/should_fail/link_parallel.csp
channel a : Bool
channel b : Bool

channel c : Int.Bool

P = STOP [a <-> c] STOP

R(i) = STOP
Q = [c.i <-> c.i+1] i : <0..10> @ R(i)
